fix bookmark title if too long

--- a/scss/inject.scss
+++ b/scss/inject.scss
@@ -336,6 +336,7 @@ a.bundle:hover {
 .bookmark_title {
 	font-size: 18px !important;
 	font-weight: bold;
+	padding-right: 40px;
 }
 .description {
 	margin-bottom: 7px;
